added code and images for all exercises except clock-face. question class still needs fixing.

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,8 @@ img {
     margin-right: auto;
 }
 
-.question {
+div.question {
+  list-style-image: 
   font-family: sans-serif;
   font-weight: bold;
   font-size: 24;
