--- a/styles.css
+++ b/styles.css
@@ -6,17 +6,36 @@ body {
     margin: 0;
 }
 
+h2 {
+    font-family: sans-serif;
+}
+
+h3 {
+    font-family: sans-serif;
+    font-style: italic;
+}
+
 img {
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
 
-div.question {
-  list-style-image: 
+code {
+  background-color: lightgray;
+  white-space: pre-wrap;
+}
+
+p {
   font-family: sans-serif;
-  font-weight: bold;
-  font-size: 24;
+}
+
+ul {
+    font-family: sans-serif;
+}
+
+ol {
+    font-family: sans-serif;
 }
 
 .header {
@@ -25,15 +44,6 @@ div.question {
     font-family: sans-serif;
     text-align: center;
     padding: 10px;
-}
-
-h2 {
-    font-family: sans-serif;
-}
-
-h3 {
-    font-family: sans-serif;
-    font-style: italic;
 }
 
 .footer {
@@ -49,18 +59,26 @@ h3 {
     padding: 15px;
 }
 
+.content {
+    width: 75%;
+}
+
+.block{
+  margin: 10px 0px 10px 0px;
+  background-color: lightgray;
+  display: block;
+}
+
 .clearfix::after {
     content: "";
     clear: both;
     display: table;
 }
 
+/* Side Menu */
+
 .sidemenu {
     width: 25%;
-}
-
-.content {
-    width: 75%;
 }
 
 .sidemenu ul {
@@ -85,6 +103,7 @@ h3 {
 
 
 /* Change the link color on hover */
+
 .sidemenu li a:hover {
     background-color: lightgray;
     color: white;
@@ -95,25 +114,11 @@ h3 {
     color: white;
 }
 
-
-code {
-  background-color: lightgray;
-  white-space: pre-wrap;
-}
-
-p {
-  font-family: sans-serif;
-}
-
-.block{
-  margin: 10px 0px 10px 0px;
-  background-color: lightgray;
-  display: block;
-}
-
 .smallPrint {
   font-size: 6pt;
 }
+
+/* Try It Button */
 
 .try-it {
   text-decoration: none;
@@ -123,7 +128,32 @@ p {
   padding: 2px;
 }
 
-ul {
-    font-family: sans-serif;
+/* Question */
+
+div.question {
+  list-style-image:
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 24;
 }
-/* add question class */
+
+.question::before {
+  content: "?";
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: 14pt;
+  font-weight: bolder;
+  margin: 0px 5px 0px 5px;
+  border-radius: 100%;
+  border-style: solid;
+  border-color: black;
+  background-color: black;
+  color: white;
+}
+
+.question {
+  margin: 10px 10px 10px 10px;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 16;
+}
