--- a/styles.css
+++ b/styles.css
@@ -121,8 +121,15 @@ ol {
 /* Try It Button */
 
 .try-it {
+  border-radius: 2px;
+  border-style: solid;
+  border-width: thin;
+  border-color: darkgray;
+  box-shadow: 3px 3px darkgray;
   text-decoration: none;
   font-family: monospace;
+  font-size: 14px;
+  font-weight: bolder;
   background-color: #f1f1f1;
   margin-right: 80%;
   padding: 2px;
